--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,33 @@
-$body-bg: #fff;
 
+@import "~bootstrap/scss/bootstrap.scss";
+@import "./color-library.scss";
 
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  color: $dark-color;
+}
 
+body::after {
+  content: "";
+  display: block;
+  height: 100px;
+}
 
-@import '~bootstrap/scss/bootstrap.scss';
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: $dark-color;
+  color: $light-color;
+}
 
-html{ height:100%; }
-body{ min-height:100%; padding:0; margin:0; position:relative; }
-
-body::after{ content:''; display:block; height:100px; }
-
-footer{
-  position:absolute;
-  bottom:0;
-  width:100%;
-  height:100px;
+.card-header {
+  background-color: $light-color;
 }
